--- a/hazards.html
+++ b/hazards.html
@@ -69,9 +69,13 @@
 
         .hazards-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(3, minmax(280px, 1fr));
             gap: 2rem;
             margin-top: 2rem;
+            max-width: 1200px;
+            margin-left: auto;
+            margin-right: auto;
+            justify-content: center;
         }
 
         .hazard-card {
@@ -217,6 +221,12 @@
         .warning-banner p {
             font-size: 1.1rem;
             opacity: 0.9;
+        }
+
+        @media (max-width: 1024px) {
+            .hazards-grid {
+                grid-template-columns: repeat(2, minmax(280px, 1fr));
+            }
         }
 
         @media (max-width: 768px) {
@@ -415,7 +425,6 @@
                             <ul>
                                 <li>Baca MSDS sebelum menggunakan</li>
                                 <li>Gunakan APD yang sesuai</li>
-                                <li>Kerja di fume hood</li>
                             </ul>
                         </div>
                     </div>
