--- a/k3.html
+++ b/k3.html
@@ -22,6 +22,15 @@
             padding: 0;
         }
 
+        /* Constrain overall width and center content */
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            box-sizing: border-box;
+        }
+
         .k3-hero {
             background: linear-gradient(135deg, var(--primary-blue), var(--teal));
             color: white;
@@ -51,6 +60,9 @@
             grid-template-columns: 1fr 1fr;
             gap: 3rem;
             align-items: center;
+            max-width: 1100px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .text-content h2 {
@@ -88,9 +100,13 @@
 
         .obligations-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(3, minmax(240px, 1fr));
             gap: 1.5rem;
             margin-top: 2rem;
+            max-width: 1100px;
+            margin-left: auto;
+            margin-right: auto;
+            justify-content: center;
         }
 
         .obligation-card {
@@ -126,6 +142,16 @@
             color: var(--primary-blue);
             opacity: 0.7;
             margin-bottom: 1rem;
+        }
+
+        @media (max-width: 1024px) {
+            .two-column {
+                grid-template-columns: 1fr;
+                max-width: 900px;
+            }
+            .obligations-grid {
+                grid-template-columns: repeat(2, minmax(240px, 1fr));
+            }
         }
 
         @media (max-width: 768px) {
@@ -191,7 +217,7 @@
                         </li>
                         <li>
                             <i class="fas fa-graduation-cap"></i>
-                            <span>Menciptakan lingkungan belajar yang kondusif</span>
+                            <span>Menciptakan lingkungan Kerja yang kondusif</span>
                         </li>
                         <li>
                             <i class="fas fa-balance-scale"></i>
@@ -226,7 +252,7 @@
                     </div>
                     
                     <div class="obligation-card">
-                        <i class="fas fa-mask"></i>
+                        <i class="fas fa-head-side-mask"></i>
                         <h3>Menggunakan Masker</h3>
                         <p>Masker untuk melindungi saluran pernapasan dari paparan uap kimia</p>
                     </div>
