--- a/k3.html
+++ b/k3.html
@@ -6,7 +6,7 @@
     <title>Kesehatan dan Keselamatan Kerja</title>
     <link rel="stylesheet" href="assets/header.css">
     <link rel="stylesheet" href="assets/footer.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
             --primary-blue: #4BA3C3;
@@ -240,7 +240,7 @@
                 
                 <div class="obligations-grid">
                     <div class="obligation-card">
-                        <i class="fas fa-user-md"></i>
+                   <i class="fas fa-flask"></i> 
                         <h3>Memakai Jas Lab</h3>
                         <p>Jas lab yang bersih dan sesuai ukuran untuk melindungi dari paparan bahan kimia</p>
                     </div>
