--- a/p3k.html
+++ b/p3k.html
@@ -968,9 +968,9 @@
                                 <ul class="nested-steps">
                                     <li>Lepas pakaian terkontaminasi</li>
                                     <li>Bilas air mengalir minimal 15 menit</li>
-                                    <li>Jika bahan bereaksi dengan air (mis. kapur), lap kering tanpa air</li>
-                                    <li>Untuk basa, setelah dibilas air, bilas dengan larutan asam asetat 1% lalu bilas lagi dengan air</li>
-                                    <li>Olesi dengan salep bor</li>
+                                    <li>Hindarin bahan penetralan kimia</li>
+                                    <li>Tutupi area yang terkena</li>
+                                    <li>Segera cari pertolongan medis</li>
                                 </ul>
                             </div>
                         </div>
