--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
         <span class="bar"></span>
       </label>
       <ul>
-        <li><a href="formulir.html"><i class="bi bi-clipboard-check"></i> Formulir</a></li>
+        <li><a href="formulir.html"><i class="bi bi-clipboard-check"></i> Formulir pelaporan Kecelakaan Kerja</a></li>
         <li><a href="k3.html"><i class="bi bi-beaker"></i> K3 Laboratorium</a></li>
         <li><a href="regulations.html"><i class="bi bi-scale"></i> Peraturan</a></li>
         <li><a href="hazards.html"><i class="bi bi-exclamation-triangle-fill"></i> Potensi Bahaya</a></li>
